# ScreenShot

./: PROJECT_CONTEXT.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx  OverlayApp.tsx  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: annotate.rs  capture.rs  image_utils.rs  lib.rs  main.rs  stitch.rs
src/components/: AnnotationEditor.tsx
