[package]
name = "screenshot-desktop"
version = "0.1.0"
description = "A private, cross-platform screenshot and scrolling capture utility"
authors = ["Amamda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenshot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
xcap = { version = "0.9.6", features = ["wgc"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
parking_lot = "0.12"
arboard = "3.6.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
